# FPGA-Quad-Frame-Remapper-PYNQ-Z1

./: README.md  quad_frame_remapper.cpp  quad_frame_remapper.xpr  quad_frame_remapper_tb.cpp
quad_frame_remapper.cache/wt/: synthesis.wdf  webtalk_pa.xml
quad_frame_remapper.runs/.jobs/: vrs_config_1.xml
quad_frame_remapper.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  clockInfo.txt  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  project1_wrapper.bit  project1_wrapper.tcl  project1_wrapper.vdi  project1_wrapper_bus_skew_routed.pb  project1_wrapper_bus_skew_routed.rpt  project1_wrapper_bus_skew_routed.rpx  project1_wrapper_clock_utilization_routed.rpt  project1_wrapper_control_sets_placed.rpt  project1_wrapper_drc_opted.rpt  project1_wrapper_drc_opted.rpx  project1_wrapper_drc_routed.pb  project1_wrapper_drc_routed.rpt  project1_wrapper_drc_routed.rpx  project1_wrapper_io_placed.rpt  project1_wrapper_methodology_drc_routed.rpt  project1_wrapper_methodology_drc_routed.rpx  project1_wrapper_power_routed.rpt  project1_wrapper_power_summary_routed.pb  project1_wrapper_route_status.pb  project1_wrapper_route_status.rpt  project1_wrapper_timing_summary_routed.pb  project1_wrapper_timing_summary_routed.rpt  project1_wrapper_timing_summary_routed.rpx  project1_wrapper_utilization_placed.pb  project1_wrapper_utilization_placed.rpt  route_design.pb  (+5 more)
vitis_embrdded_workspace/: project1_wrapper.xsa
vitis_embrdded_workspace/platform/hw/sdt/drivers/quad_frame_remapper_v1_0/src/: CMakeLists.txt  Makefile
(+450 files in other folders)
